# Invoice-agent

./: .env.example  .gitignore  Makefile  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260419_0001_0001_initial.py  20260420_0900_0002_invoice_versioning.py  20260511_1200_0003_app_settings.py
backend/app/: main.py
backend/app/agents/: boq_mapping.py  extraction.py  recommendation.py
backend/app/api/: audit.py  auth.py  boq.py  contracts.py  dashboard.py  decisions.py  deps.py  health.py  historical_invoices.py  invoices.py  matching.py  payments.py  projects.py  recommendations.py  settings.py  users.py  validation.py  vendors.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  seed.py  session.py
backend/app/models/: __init__.py  app_setting.py  audit_log.py  boq_item.py  contract.py  decision.py  enums.py  extraction.py  finding.py  invoice.py  invoice_line_item.py  llm_call.py  match.py  payment.py  project.py  recommendation.py  user.py  vendor.py
backend/app/schemas/: auth.py  boq.py  common.py  contract.py  decision.py  historical.py  invoice.py  matching.py  payment.py  project.py  recommendation.py  settings.py  user.py  validation.py  vendor.py
backend/scripts/: load_xlsx_seed.py
backend/tests/: test_boq_parser.py  test_extraction_parser.py  test_historical_parser.py  test_matching_scoring.py  test_recommendation_synthesis.py  test_security.py  test_validation_rules.py
docs/: deployment.md  (+2 more)
(+118 files in other folders)
