[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-invoicing-backend"
version = "0.1.0"
description = "KPMG Finance Invoicing Agent — backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.8",
    "pydantic-settings>=2.5",
    "email-validator>=2.2",
    "sqlalchemy>=2.0.35",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "argon2-cffi>=23.1",
    "pyjwt>=2.9",
    "python-multipart>=0.0.12",
    "celery[redis]>=5.4",
    "redis>=5.1",
    "httpx>=0.27",
    "ollama>=0.3",
    "pdfplumber>=0.11",
    "pymupdf>=1.24",
    "pytesseract>=0.3.10",
    "paddleocr>=2.8",
    "pillow>=10.4",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "python-json-logger>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra -q"
testpaths = ["tests"]
